--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ button{
      border-radius: 10px;
      font-size: 1.1rem;
      color: #ffde83;
+     margin-left: 10px;
 }
 .result{
      margin-top: 30px;
